@@ -609,6 +609,15 @@ subtest 'cast' => sub {
     $ffi->function(string_set_closure => ['(string)->void'])->call($pointer2);
     $ffi->function(string_call_closure => ['string'])->call("testvalue");
   };
+
+  subtest 'attach cast with wrapper' => sub {
+    $ffi->attach_cast('cast4', 'int', 'int', sub {
+      my($xsub, $in) = @_;
+      my $out = $xsub->($in);
+      return $out + 4;
+    });
+    is(cast4(4), 8);
+  };
 };
 
 subtest 'ignore_not_found' => sub {
